<resources>
    <string name="app_name">DailyDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="focus">Focus</string>
    <string name="daily_diary">Daily Diary</string>
    <string name="your_productivity_companion">Your productivity companion</string>
    <string name="add_something">Add something</string>
    <string name="add">Add an item</string>
    <string name="appName">Daily Diary</string>
    <string name="add_event">Add event</string>
    <string name="tasks">Tasks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add task</string>
    <string name="new_task">New task</string>
    <string name="app_icon">App icon</string>
    <string name="add_a_task">Add a task</string>
    <string name="this_is_a_test_lol">This is a test lol</string>
    <string name="delete_a_task">Delete a task</string>
    <string name="example_lol">example lol</string>
    <string name="due_date">Due date:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="edit_a_task">Edit a task</string>
    <string name="start_date">Start date:</string>
    <string name="night_mode">Night mode</string>
    <string name="tasks_reminder">Tasks reminder:</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="info">Info</string>
    <string name="work_on_this_at">Work on this at:</string>
    <string name="app_description">With daily diary you can:\n• Keep track of tasks/projects\n• Set reminders to work on things\n• Store and view contact info\n• Improve your productivity\n\nCreated by Sam Hussain</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="new_contact">New contact</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="title">Title</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="email">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select image</string>
    <string name="name">Name</string>
    <string name="contact_photo">Contact photo</string>
    <string name="edit_a_contact">Edit a contact</string>
    <string name="delete_a_contact">Delete a contact</string>
    <string name="view_this_contact">View this contact</string>
</resources>