<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/calFragment"
            android:icon="@drawable/calendar_icon"
            android:title="@string/calendar" />
        <item
            android:id="@+id/tasksFragment"
            android:icon="@drawable/tasks_icon"
            android:title="@string/tasks" />
        <item
            android:id="@+id/contactsFragment"
            android:icon="@drawable/contacts_icon"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_focus"
            android:icon="@drawable/focus_icon"
            android:title="@string/focus" />
    </group>
</menu>