<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/task_bg"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <CheckBox
        android:id="@+id/taskCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:buttonTint="@color/textColor" />

    <TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@+id/taskCheckbox"
        android:text="@string/new_task"
        android:textColor="@color/textColor"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/startTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTextView"
        android:layout_toEndOf="@+id/taskCheckbox"
        android:text="@string/start_date"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/dueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTextView"
        android:layout_toEndOf="@+id/taskCheckbox"
        android:text="@string/due_date"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/remindTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dueTextView"
        android:layout_toEndOf="@+id/taskCheckbox"
        android:text="@string/work_on_this_at"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/taskClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/itemTextView"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_a_task"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:tint="@color/textColor"
        android:src="@drawable/cancel_icon" />

    <ImageButton
        android:id="@+id/taskEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskClose"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_a_task"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/edit_icon" />
</RelativeLayout>